--- a/{{projectName}}/package.json
+++ b/{{projectName}}/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "couchbase": "2.6.9"
+    "couchbase": "^2.6.9"
   },
   "devDependencies": {},
   "scripts": {
